--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                           <h6 style="color: #353130; margin-bottom: 90px;">
                             <p>
                               Sou uma mulher que ama cozinhar, amo o que faço e procuro sempre trazer prazeres
-                              na comida pra os meus clientes, realizo varios pratos.
+                              na comida para os meus clientes, realizo varios pratos.
                             </p>
                           </h6>  
                       </span>
