--- a/cardapio.html
+++ b/cardapio.html
@@ -14,7 +14,7 @@
 <body>
     <!--Barra de menu-->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #353130; color: #ffffff;">
-        <a class="navbar-brand" href="#" style="margin-left: 1%;"><img src="img/logotipo3semfundo.png" height= "150"width="150"
+        <a class="navbar-brand" href="#" style="margin-left: 1%;"><img src="img/logo da empresa.png" width="100"
                 alt="Delicia da neia"></a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
@@ -35,8 +35,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col" id="cardapiobanner">
+                <!-- &#127803; -->
                 <div id="textocardapiobanner">
-                    <h1> &#127803; CONHEÇA NOSSO CARDÁPIO &#127803;  </h1>
+                    
                 </div>
             </div>
         </div>
