--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <!--Menu-->
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #353130; color: #ffffff;">
-        <a class="navbar-brand" href="#" style="margin-left: 1%;"><img src="img/logotipo3semfundo.png" height= "150"width="150" alt="Delciia da neia"></a>  
+        <a class="navbar-brand" href="#" style="margin-left: 1%;"><img src="img/logo da empresa.png" alt="Restaurante Vale Minas"></a>  
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
               <span class="navbar-toggler-icon"></span>
           </button>
